news feed spacing issues fix

--- a/AZ_Suggestions_Rep_Territory/css/default-theme.css
+++ b/AZ_Suggestions_Rep_Territory/css/default-theme.css
@@ -128,3 +128,7 @@
     max-height:15vh;
     overflow:auto;
 }
+
+.panel-body{
+    padding:10px;
+}
